<resources>
    <string name="app_name">东城钥匙柜</string>
    <string name="terminal_uid">终端编号:</string>
    <string name="hotline">客服热线:</string>
    <string name="home_welcome">欢迎使用东城智能快递柜</string>
    <string name="home_courier">存钥匙</string>
    <string name="home_pickup">取钥匙</string>
    <string name="home_query">快件查询</string>
    <string name="home_breakdown">设备故障</string>
    <string name="version">版本:</string>
    <string name="prompt_sure">确定</string>
    <string name="prompt_to_home">返回主页</string>
    <string name="title_pickup_code">取件</string>
    <string name="hint_pickup_open_code">输入取件密码</string>
    <string name="prompt_pickup_continue">继续取用</string>
    <string name="prompt_pickup_success">号箱门已经打开，请取走包裹并关好箱门，谢谢！</string>
    <string name="title_courier_login">登录</string>
    <string name="hint_courier_id">投递账户</string>
    <string name="hint_courier_pwd">账户密码</string>
    <string name="prompt_courier_user_name">请输入投递账户</string>
    <string name="prompt_courier_user_pwd">请输入登录密码</string>
    <string name="title_courier_home">投递</string>
    <string name="prompt_courier_gerrt">你好:</string>
    <string name="prompt_courier_surplus">空余:</string>
    <string name="prompt_courier_expired">预期件:</string>
    <string name="prompt_courier_large_box"> 大箱</string>
    <string name="prompt_courier_middle_box"> 中箱</string>
    <string name="prompt_courier_small_box"> 小箱</string>
    <string name="prompt_courier_deposit_package">存入包裹</string>
    <string name="hint_courier_package_no">包裹号</string>
    <string name="hint_courier_customer_mobile">收件人手机号</string>
    <string name="hint_courier_opening">正在开箱，请稍后......</string>
    <string name="prompt_courier_cancle">取消投递</string>
    <string name="prompt_courier_continue">确认投递</string>
    <string name="prompt_courier_openbox_success">号箱门已经打开，请放入包裹并关好箱门，谢谢！</string>
    <string name="title_courier_record">投递记录</string>
    <string name="prompt_courier_time">投递时间：</string>
    <string name="prompt_courier_customer">收 件 人：</string>
    <string name="prompt_courier_package_no">包 裹 号：</string>
    <string name="prompt_courier_package_status">状态：</string>
    <string name="title_courier_recycler">回收</string>
    <string name="prompt_recycler_cancle">取消回收</string>
    <string name="prompt_recycler_continue">确认回收</string>
    <string name="prompt_recycler_openbox_success">号箱门已经打开，请取走包裹并关好箱门，谢谢！</string>
    <string name="error_courier_package_003">请输入包裹号</string>
    <string name="error_courier_telphone_001">请输入收件人手机号</string>
    <string name="error_courier_telphone_002">该手机号不能被投递</string>
    <string name="error_courier_telphone_003">手机号不符合标准</string>
    <string name="error_courier_package_001">包裹号已经存在</string>
    <string name="error_courier_package_002">包裹号不符合标准</string>
    <string name="title_manage_admin">管理</string>
    <string name="title_manage_deploy">配置</string>
    <string name="prompt_manage_deploy">配置</string>
    <string name="prompt_manage_detect">检测</string>
    <string name="prompt_manage_records">记录</string>
    <string name="prompt_manage_system_info">系统信息</string>
    <string name="prompt_manage_install_info">安装信息</string>
    <string name="hint_manage_device_id">请输入设备号</string>
    <string name="hint_manage_device_name">设备名称</string>
    <string name="hint_manage_warehouse_name">仓库编号</string>
    <string name="hint_manage_device_site">设备地址</string>
    <string name="prompt_manage_server_info">服务器地址</string>
    <string name="hint_manage_business_ip">业务服务器</string>
    <string name="hint_manage_server_port">端口</string>
    <string name="hint_manage_monitoring_ip">监控服务器</string>
    <string name="prompt_manage_cabinet_info">柜体信息</string>
    <string name="prompt_manage_run_state">运营状态</string>
    <string name="prompt_manage_normal">正常</string>
    <string name="prompt_manage_device_id">设备号：</string>
    <string name="prompt_pickup_rush_pwd">密&#12288;码：</string>
    <string name="prompt_manage_error">故障</string>
    <string name="prompt_manage_repulse_open">拒绝关箱</string>
    <string name="prompt_manage_on">&#160;&#160;开&#160;&#160;</string>
    <string name="prompt_manage_off">&#160;&#160;关&#160;&#160;</string>
    <string name="prompt_manage_voice_hint">语音提示</string>
    <string name="prompt_manage_detect_info">检测功能</string>
    <string name="prompt_manage_shake_detect">震动防撬检测</string>
    <string name="prompt_manage_goods_detect">物品检测</string>
    <string name="prompt_manage_power_detect">电源检测</string>
    <string name="title_manage_system_info">系统信息</string>
    <string name="prompt_manage_system_time">系统时间</string>
    <string name="prompt_manage_system_versions">系统版本</string>
    <string name="prompt_manage_exit">退出到桌面</string>
    <string name="prompt_manage_system_log">系统日志</string>
    <string name="hint_manage_id">账户</string>
    <string name="hint_manage_pwd">密码</string>
    <string name="prompt_manage_box_fault">箱门故障</string>
    <string name="prompt_manag_box_article">有物</string>
    <string name="prompt_manage_save">保存</string>
    <string name="prompt_manage_initialize">初始化</string>
    <string name="title_manage_records">记录查询</string>
    <string name="hint_manage_telhone">收件人手机号</string>
    <string name="hint_manage_package_statue">包裹状态</string>
    <string name="hint_manage_package">包裹号</string>
    <string name="hint_manage_courier">投递员</string>
    <string name="prompt_manage_deliver_time">投递时间</string>
    <string name="prompt_manage_package">包裹号</string>
    <string name="prompt_manage_pickup_time">取件时间</string>
    <string name="prompt_manage_boxno">箱号</string>
    <string name="prompt_manage_statue">状态</string>
    <string name="prompt_manage_operate">操作</string>
    <string name="prompt_manage_pickup">管理取件</string>
    <string name="prompt_manage_query">查询</string>
    <string name="prompt_manage_full_open">全开</string>
    <string name="prompt_manage_box_layout">箱门设置</string>
    <string name="prompt_manage_large_box"> 大箱</string>
    <string name="prompt_manage_middle_box"> 中箱</string>
    <string name="prompt_manage_small_box"> 小箱</string>
    <string name="prompt_manage_Super_box"> 超大箱</string>
    <string name="prompt_manage_mini_box"> 迷你箱</string>
    <string name="prompt_manage_control_box">主控箱</string>
    <string name="prompt_manage_adv_box"> 广告箱</string>
    <string name="prompt_manage_common_desk">普通柜</string>
    <string name="prompt_manage_fresh_desk"> 生鲜柜</string>
    <string name="prompt_manage_heat_desk"> 加热柜</string>
    <string name="prompt_manage_laundry_desk"> 洗衣柜</string>
    <string name="prompt_manage_box_amount"> 箱门数量</string>
    <string name="prompt_manage_confirm">确认</string>
    <string name="prompt_manage_cancel">取消</string>
    <string name="prompt_manage_deskno">副柜编号</string>
    <string name="prompt_manage_desktype">副柜类型</string>
    <string name="prompt_manage_desk">柜体</string>
    <string name="prompt_manage_desk_height">柜门设置</string>
    <string name="prompt_manage_box_spen">箱门尺寸</string>
    <string name="prompt_manage_add">新增</string>
    <string name="prompt_manage_delete">删除</string>
    <string name="prompt_manage_start_time">开始时间</string>
    <string name="prompt_manage_over_tiem">结束时间</string>
    <string name="error_manage_server_000">服务器端口类型不对!</string>
    <string name="error_manage_server_001">服务器端口只能在0—65535之间!</string>
    <string name="error_manage_server_002">服务器地址格式不正确!</string>
    <string name="prompt_arrays_normal">在箱正常</string>
    <string name="prompt_arrays_lock">锁定</string>
    <string name="prompt_arrays_cancel">取消</string>
    <string name="prompt_arrays_Timeout">超时</string>
    <string name="prompt_arrays_recaption">投递员取回</string>
    <string name="prompt_arrays_overdue">逾期回收</string>
    <string name="prompt_arrays_error">异常回收</string>
    <string name="prompt_arrays_pickup">用户取件</string>
    <string name="prompt_arrays_admin_pickup">管理员取件</string>
    <string name="E100">java标准异常</string>
    <string name="E106">打开文件失败</string>
    <string name="E107">编码格式不支持</string>
    <string name="E10001">Load library DcdzAlxDriversSerialPort4L failed.</string>
    <string name="E10002">Open serial port failed.</string>
    <string name="E10003">初始化端口失败</string>
    <string name="E10004">设置串口输入输出缓冲区大小失败</string>
    <string name="E10005">设置串口读写超时时间失败</string>
    <string name="E10006">开启串口事件模式失败</string>
    <string name="E10007">串口异常</string>
    <string name="E10008">串口异常,发送数据失败</string>
    <string name="E10009">数据发送超时，请检查端口连接或硬件</string>
    <string name="E10010">数据接收超时，请检查端口连接或硬件</string>
    <string name="E10011">内存不足</string>
    <string name="E10012">清理串口缓冲区失败</string>
    <string name="E10013">清理串口错误失败</string>
    <string name="E11000">数据帧格式错误，硬件可能存在故障</string>
    <string name="E11001">命令执行错误，硬件可能存在故障</string>
    <string name="E11002">线程中断异常</string>
    <string name="E12000">读取卡号失败</string>
    <string name="E13000">获取扫描枪版本号失败</string>
    <string name="E13001">切换扫描枪模式失败</string>
    <string name="E13002">触发扫码失败</string>
    <string name="E13003">停止扫码失败</string>
    <string name="E15000">初始化网络组件失败</string>
    <string name="E15003">错误的参数</string>
    <string name="E15004">发送网络请求失败</string>
    <string name="E15005">ONLY WS(S) protocol supported</string>
    <string name="E15006">network is disconneted</string>
    <string name="E15007">can not connect server</string>
    <string name="E101">输入数据不全</string>
    <string name="E102">设备没有初始化,请添加柜体信息</string>
    <string name="E103">设备状态不正常</string>
    <string name="E104">推送服务不存在</string>
    <string name="E105">错误的数据格式</string>
    <string name="E300">繁忙</string>
    <string name="E301">驱动板打开失败</string>
    <string name="E302">箱门数量超出32</string>
    <string name="E303">未找到指定箱门</string>
    <string name="E304">查询格口状态失败</string>
    <string name="E305">开箱失败</string>
    <string name="E310">打印机故障</string>
    <string name="E30002">未查询到包裹信息</string>
    <string name="E40000">网络超时，请稍后重试</string>
    <string name="E500">网络层错误</string>
    <string name="E501">网络连接失败</string>
    <string name="E502">The network not configured</string>
    <string name="E503">The network not connected</string>
    <string name="E505">发送消息失败</string>
    <string name="E507">发送消息超时</string>
    <string name="E700">数据持久层错误,请联系系统管理员</string>
    <string name="E701">数据库记录不存在</string>
    <string name="E702">获取数据库连接失败</string>
    <string name="E110000">业务层错误</string>
    <string name="E110001">业务不支持</string>
    <string name="E120001">柜号不能为空</string>
    <string name="E120002">注册未通过，请修改柜号</string>
    <string name="E120003">副柜不能为空，请添加副柜</string>
    <string name="E120004">网络参数不能为空</string>
    <string name="E120005">柜体数据还未保存</string>
    <string name="E120007">设备名称不能为空</string>
    <string name="E120008">安装地址不能为空</string>
    <string name="E120009">投递局号格式错误</string>
    <string name="E120010">投递局号不能为空</string>
    <string name="E133001">用户名或密码错误</string>
    <string name="E133002">包裹已经做过投递</string>
    <string name="E133003">包裹不存在</string>
    <string name="E133004">未找到可用箱门</string>
    <string name="E133005">订单已经锁定</string>
    <string name="E133006">订单状态不正常</string>
    <string name="E133007">箱门已经在使用</string>
    <string name="E133008">订单外列表不允许投递</string>
    <string name="E133009">订单不在回收列表中</string>
    <string name="E1330011">校验码错误</string>
    <string name="E133021">包裹单号或提货码错误</string>
    <string name="E133022">手机号或提货码错误</string>
    <string name="E133023">用户卡号或提货码错误</string>
    <string name="E133024">包裹单号(手机号)或提货码错误</string>
    <string name="E133025">提货密码错误</string>
    <string name="E133026">收件人手机号错误</string>
    <string name="prompt_pickup_code">密码取用</string>
    <string name="prompt_finger_login">指纹登录</string>
    <string name="prompt_exit">退出</string>
    <string name="prompt_finger_guidance">请将手指放在下方操作区域内并尽量让手指完全贴合扫描区</string>
    <string name="prompt_user_name">用户名：</string>
    <string name="prompt_user_login">用户登录</string>
    <string name="hint_input_username">请输入用户名</string>
    <string name="hint_input_pwd">请输入密码</string>
</resources>