<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.pickup.PickupFingerFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="118dp"
        android:text="@string/prompt_finger_login"
        android:textColor="@color/colorWhite"
        android:textSize="32sp" />

    <Button
        android:id="@+id/btn_go_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="118dp"
        android:background="#00000000"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/go_back"
        android:text="@string/prompt_exit"
        android:textColor="@color/colorWhite"
        android:textSize="28sp" />

    <TextView
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="223dp"
        android:text="@string/prompt_finger_guidance"
        android:textColor="@color/colorWhite"
        android:textSize="30sp" />

    <ImageView
        android:layout_width="145dp"
        android:layout_height="215dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="306dp"
        android:background="@drawable/guide_finger"
        android:contentDescription="@string/prompt_finger_login" />

    <Button
        android:id="@+id/bt_pickup_by_code"
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="80dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/home_query_bg"
        android:text="@string/prompt_pickup_code"
        android:textColor="@color/colorWhite"
        android:textSize="28sp" />

</RelativeLayout>